строка подключения вынесена в appsetting.Development.json и добавлена через IOptions<> паттерн

--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/appsettings.Development.json
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DatabaseConnection": {
+    "ConnectionString": "Data Source=DESKTOP-K1GCKQ5\\MSSQLSERVER2017;Initial Catalog=TestDb;User ID=TestDbLogin;Password=TestDbDevelop1;"
   }
 }
