--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI.TESTS/APP.STOREHOUSE.WEBAPI.TESTS.csproj
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI.TESTS/APP.STOREHOUSE.WEBAPI.TESTS.csproj
@@ -9,9 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\APP.STOREHOUSE.WEBAPI\APP.STOREHOUSE.WEBAPI.csproj" />
   </ItemGroup>
 
 </Project>
