--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
@@ -26,23 +26,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Properties\Resources.ru.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-    </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
+    <Compile Update="Properties\ru-RU.Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
+      <DependentUpon>ru-RU.Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Properties\ru-RU.Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ru-RU.Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
