--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/Properties/launchSettings.json
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/Properties/launchSettings.json
@@ -16,8 +16,7 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:7247;http://localhost:5247",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ConnectionString"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
