добавлена реализация вызывающая  TVF функцию STOREHOUSE.FIND_PRODUCT (и вызвана в методе ProductController.Get)
Signed-off-by: Bulat Mukhametshin <m11e@yandex.ru>

--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="EntityFramework.CodeFirstStoreFunctions" Version="1.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Resources.ResourceManager" Version="4.3.0" />
   </ItemGroup>
