добавлен middleware для обработки исключений
Signed-off-by: Bulat Mukhametshin <m11e@yandex.ru>

--- a/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
+++ b/app-sources/APP/APP.STOREHOUSE.WEBAPI/APP.STOREHOUSE.WEBAPI.csproj
@@ -22,6 +22,11 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="EntityFramework.CodeFirstStoreFunctions" Version="1.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Resources.ResourceManager" Version="4.3.0" />
   </ItemGroup>
